--- a/src/algotrade/ui/templates/base.html
+++ b/src/algotrade/ui/templates/base.html
@@ -19,6 +19,8 @@
           <a class="site-nav__link" href="/vcp">VCP Optimizing</a>
           <a class="site-nav__link" href="/vcp-scan">VCP Scan</a>
           <a class="site-nav__link" href="/momentum">Momentum</a>
+          <a class="site-nav__link" href="/momentum-paper">Momentum Paper Trade</a>
+          <a class="site-nav__link" href="/momentum-live">Momentum Live Trade</a>
         </nav>
         <div class="site-header__actions">
           <button id="fetch-tech-button" class="site-header__button" type="button">Fetch US Liquidity</button>
